--- a/BZ2TerrainEditor/Properties/Resources.resx
+++ b/BZ2TerrainEditor/Properties/Resources.resx
@@ -214,4 +214,7 @@
   <data name="arrow_move" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\arrow-move.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="arrow-rescale-090" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\arrow-rescale-090.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
